--- a/css/style.css
+++ b/css/style.css
@@ -10,11 +10,6 @@ body {
     font-family: 'Mulish', sans-serif;
 }
 
-main {
-    width: 100%;
-    height: 100vh;
-}
-
 header {
     width: 100%;
     height: 56px;
@@ -22,6 +17,49 @@ header {
     display: flex;
     align-items: center;
     justify-content: space-between;
+}
+
+h1 {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    color: #F6F7EB;
+    font-size: 50px;
+    font-weight: 800;
+    text-align: center;
+    margin-bottom: 30px;
+}
+
+footer {
+    width: 100%;
+    height: 56px;
+    padding: 0px 8px;
+    margin-top: 30px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #000022;
+    color: #F6F7EB;
+    font-size: 14px;
+    font-weight: 800;
+    text-align: center;
+}
+
+footer a {
+    color: #F6F7EB;
+    cursor: pointer;
+    text-decoration: none;
+    font-size: 14px;
+}
+
+footer a:hover {
+    text-decoration: underline;
+}
+
+.icon {
+    width: 40px;
+    margin: 0px 10px;
 }
 
 .header__logo {
@@ -56,4 +94,196 @@ header {
 
 .header__menu--profile {
     width: 40px;
+}
+
+.search {
+    /* display: flex;
+    align-items: center;
+    justify-content: center; */
+    height: 300px;
+}
+
+.search__title {
+    color: #F6F7EB;
+    font-size: 27px;
+}
+
+.search__input {
+    border: 2px solid #F6F7EB;
+    border-radius: 25px;
+    background-color: rgba(255, 255, 255, 0.15);
+    font-family: 'Mulish', sans-serif;
+    font-size: 16px;
+    color: #F6F7EB;
+    height: 50px;
+    width: 70%;
+    padding: 0px 20px;
+}
+
+.search__input::placeholder {
+    color: #F6F7EB;
+}
+
+.carousel {
+    width: 100%;
+    padding: 30px;
+    overflow: scroll;
+    position: relative;
+}
+
+.carousel__container {
+    white-space: nowrap;
+    margin: 70px 0px;
+    padding-bottom: 10px;
+}
+
+.carousel-item {
+    display: inline-block;
+    width: 200px;
+    height: 250px;
+    margin-right: 20px;
+    border-radius: 20px;
+    overflow: hidden;
+    background-color: #000022;
+    cursor: pointer;
+    transition: 450ms all;
+    transform-origin: center left;
+    position: relative;
+}
+
+.carousel__item:hover ~ .carousel-item {
+    transform: translate3d(100px, 0, 0);
+}
+
+.carousel__container:hover .carousel-item {
+    opacity: 0.3;
+}
+
+.carousel__container:hover .carousel-item:hover {
+    transform: scale(1.5);
+    opacity: 1;
+}
+
+.carousel-item__img {
+    width: 200px;
+    height: 250px;
+    object-fit: cover;
+}
+
+.carousel-item__details {
+    background: linear-gradient(0deg, rgba(0, 0, 34, 0.8) 0%, rgba(0, 0, 34, 0) 100%);
+    font-size: 10px;
+    opacity: 0;
+    transition: 450ms opacity;
+    padding: 10px;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    top: 0;
+}
+
+.login {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    padding: 0px 30px;
+    min-height: calc(100vh - 200px);
+}
+
+.login__container {
+    background-color: rgba(255, 255, 255, 0.15);
+    border-radius: 40px;
+    border: 2px solid #F6F7EB;
+    color: #F6F7EB;
+    padding: 60px 68px 40px;
+    min-height: 700px;
+    width: 80%;
+    max-width: 600px;
+    display: flex;
+    justify-content: space-around;
+    flex-direction: column;
+}
+
+.login__container--form {
+    display: flex;
+    flex-direction: column;
+}
+
+.login__container--form label {
+    font-size: 14px;
+}
+
+.login__container--remember-me {
+    color: #F6F7EB;
+    display: flex;
+    justify-content: space-between;
+    margin-top: 10px;
+}
+
+.login__container--remember-me a {
+    color: #F6F7EB;
+    text-decoration: none;
+    font-size: 14px;
+}
+
+.login__container--remember-me a:hover {
+    text-decoration: underline;
+}
+
+.login__container--social-media > div {
+    display: flex;
+    align-items: center;
+    font-size: 14px;
+    margin-bottom: 10px;
+}
+
+.login__container--register {
+    font-size: 14px;
+}
+
+.login__container--register a {
+    color: #F6F7EB;
+    font-size: 16px;
+    text-decoration: none;
+    font-weight: bold;
+}
+
+.login__container--register a:hover {
+    text-decoration: underline;
+}
+
+.input {
+    background-color: rgba(255, 255, 255, 0.15);
+    border-radius: 4px;
+    border: 0;
+    border-bottom: 2px solid #F6F7EB;
+    color: #F6F7EB;
+    height: 50px;
+    line-height: 50px;
+    margin-bottom: 20px;
+    padding: 5px 20px;
+    width: 100%;
+    font-family: 'Mulish', sans-serif;
+    font-size: 16px;
+    outline: none;
+}
+
+::placeholder {
+    color: #F6F7EB;
+}
+
+.button {
+    background-color: rgba(0, 0, 34, 0.75);
+    border: none;
+    border-radius: 25px;
+    color: #F6F7EB;
+    cursor: pointer;
+    font-size: 16px;
+    font-weight: bold;
+    font-family: 'Mulish', sans-serif;
+    height: 50px;
+    letter-spacing: 1.5px;
+    margin: 24px 0px 12px;
 }
